--- a/src/app/pages/posts/posts.component.scss
+++ b/src/app/pages/posts/posts.component.scss
@@ -2,13 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 
-    &Main{
-        display: flex;        
+    &Posts{
+        display: flex;
+        width: 50%;
     }
     &Header{
         display: flex;
+        width: 50%;
+        margin-top: 20px;
+    }
+    .header{
         margin-top: 20px;
     }
 }
